[package]
name = "delayed-expressions"
version = "0.1.0"
authors = ["zylkowski_a <arkadiuszzylkowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delayed_expressions_derive = {version="*", path="./delayed-expressions-derive"}
serde = { version = "*", features = ["derive"]}
typetag = "*"
erased-serde = "0.3.18"